--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,12 @@
 spring.application.name=rabbit
 
+management.security.enabled=false
+management.add-application-context-header=false
+management.health.diskspace.enabled=false
+
+endpoints.enabled=false
+endpoints.info.enabled=true
+endpoints.health.enabled=true
+endpoints.metrics.sensitive=false
+
 leader.key=service/${spring.application.name}/leader
