Added annotation that uses latch

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 spring.application.name=rabbit
 
+logging.level.consul.leader=DEBUG
+
 management.security.enabled=false
 management.add-application-context-header=false
 management.health.diskspace.enabled=false
